UtahLiveDataTest/src/objects/R_AD__c.object
<CustomObject>
    <description>This is FINET Vendor address object</description>
    <fields>
        <fullName>AD_ID__c</fullName>
        <label>AD_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressID__c</fullName>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>VEND_CUST_CD+AD_TYP+AD_ID</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>42</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINETVCUST__c</fullName>
        <label>FINETVCUST</label>
        <referenceTo>R_VEND_CUST__c</referenceTo>
        <relationshipLabel>R_AD</relationshipLabel>
        <relationshipName>VCUSTADD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VendorAddressID__c</fullName>
        <label>Vendor Address ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ad_typ__c</fullName>
        <label>AddressType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city_nm__c</fullName>
        <label>City Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctry__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prin_cntac__c</fullName>
        <description>Exact field name from the FINET table</description>
        <label>Primary contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>st__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>str_1_nm__c</fullName>
        <label>Street 1 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>str_2_nm__c</fullName>
        <label>Street 2 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_ph_no__c</fullName>
        <label>Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>R_AD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Address GG ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R_AD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>